Fix vertical alignment of small_submit buttons.
Fix Add element (+) button on query pages.

--- a/css/bigsdb.css
+++ b/css/bigsdb.css
@@ -514,7 +514,7 @@ p.progress {
 	background: #f0f0f0;
 	color: #333;
 	border: 1px solid #d6dde7;
-	box-shadow: 0 1px 2px rgba(0,0,0,0.06);
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.06);
 	border-radius: 3px;
 	white-space: nowrap
 }
@@ -639,13 +639,15 @@ div.references li {
 	padding-bottom: 1em;
 }
 
-p#show_projects,p#show_refs {
+p#show_projects,
+p#show_refs {
 	color: #6c758b;
 	margin: 12px 0 24px 24px;
 	cursor: pointer;
 }
 
-p#hide_projects,p#hide_refs {
+p#hide_projects,
+p#hide_refs {
 	color: #6c758b;
 	margin: 12px 0 24px 24px;
 	cursor: pointer;
@@ -669,6 +671,8 @@ input.submit {
 a.small_submit,
 input.small_submit,
 button.small_submit {
+	display: flex;
+	align-items: center;
 	border-radius: 3px;
 	font-family: 'pt_sansbold';
 	border: 0;
@@ -752,7 +756,8 @@ a.add_button {
 	color: #888;
 	padding: 0 0.5em;
 	font-size: 1em;
-	max-height: 1.4em;
+	display: flex;
+	align-items: center;
 }
 
 a.add_button:hover {
